# dithering

./: CMakeLists.txt  main.cpp
camera/: camera_capturing.cpp  camera_capturing.h
filters/: dithering.cpp  dithering.h
